--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
 	<title>Lexicon Legendary Reverb and Effects</title>
-	<link href='css/LEXbase.css' type='text/css' rel='stylesheet' />
 	<link href='css/LEXstyle.css' type='text/css' rel='stylesheet' />
-	<script type='text/javascript' src='js/jquery.min.js'></script>
-	<script type='text/javascript' src='js/jquery.scrollTo-min.js'></script>
-	<script type='text/javascript' src='js/jquery.localscroll-min.js'></script>
-	<script type='text/javascript' src='js/init.js'></script>
-        <script type="text/javascript" src="js/swfobject.js"></script>
+    <script type="text/javascript" src="js/swfobject.js"></script>
 
 </head>
 
@@ -47,12 +42,12 @@
                 <div class="headercontainer">
 
                         <div class="headertopmargin">
-                                <img id="Rack_topborder" src="images/Rack_topborder.png" width="1080" height="54" alt="" />
+                                <img id="Rack_topborder" src="images/top_rackborder.png" width="1078" height="53" alt="" />
 
                         </div>
 
                         <div class="headermargin">
-                                <img id="Rack_leftborder_upper" src="images/Rack_leftborder_upper.png" width="54" height="360" alt="" />
+                                <img id="Rack_leftborder_upper" src="images/left_upper_rackborder.png" width="53" height="360" alt="" />
 
                         </div>
 
@@ -83,7 +78,7 @@
                         </div>
 
                         <div class="headermargin">
-                                <img id="Rack_rightborder_upper" src="images/Rack_rightborder_upper.png" width="54" height="360" alt="" />
+                                <img id="Rack_rightborder_upper" src="images/right_upper_rackborder.png" width="53" height="360" alt="" />
 
                         </div>
 
@@ -94,7 +89,7 @@
 		<div class="lowercontainer">
 
                         <div class = "lowermarginleft">
-                                <img id="Rack_leftborder_lower" src="images/Rack_leftborder_lower.png" width="54" height="1452" alt="" />
+                                <img id="Rack_leftborder_lower" src="images/left_lower_rackborder.png" width="53" height="1452" alt="" />
 
                         </div>
 															
@@ -304,18 +299,23 @@
 				</div>
 
 				<div class="lowermarginright">
-                                        <img id="Rack_rightborder_lower" src="images/Rack_rightborder_lower.png" width="54" height="1452" alt="" />
+                                        <img id="Rack_rightborder_lower" src="images/right_lower_rackborder.png" width="53" height="1452" alt="" />
 
 				</div>
 
 				<div class="lowerbottommargin">
-                                        <img id="Rack_BottomBorder" src="images/Rack_BottomBorder.png" width="1080" height="54" alt="" />
+                                        <img id="Rack_BottomBorder" src="images/bottom_rackborder.png" width="1078" height="53" alt="" />
 
 				</div>
 
 		</div>
 
 	</div>
+
+    <script type='text/javascript' src='js/jquery.min.js'></script>
+    <script type='text/javascript' src='js/jquery.scrollTo-min.js'></script>
+    <script type='text/javascript' src='js/jquery.localscroll-min.js'></script>
+    <script type='text/javascript' src='js/init.js'></script>
 
 </body>
 </html>
